--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ PORT=3000
 NODE_ENV=development
 MONGODB_URI=mongodb://localhost:27017/mydatabase
 JWT_SECRET=p2s5v8y/B?E(H+MbQeThVmYq3t6w9z$C
-APIFY_API_TOKEN=apify_api_xhDBW0YhZNXRDv2DF6cXQ8FLFXK0Q13BJQxo 
+APIFY_API_TOKEN=
